# AMI-DATAOPS

./: .env.example  .pre-commit-config.yaml  Makefile  README.md  extension.manifest.yaml  pyproject.toml
ami/: bootstrap.py
ami/core/: dao.py  exceptions.py  graph_relations.py  unified_crud.py
ami/dataops/backup/: backup_config.py  backup_exceptions.py  types.py
ami/dataops/intake/: audit.py  validation.py
ami/dataops/report/: bundling.py  cli.py  config.py  defaults.py  main.py  scanner.py  tui.py  wizard.py  wizard_helpers.py
ami/dataops/serve/: ansible.py  cli.py  main.py  status.py
ami/implementations/: embedding_service.py
ami/implementations/graph/: dgraph_dao.py  dgraph_graph.py  dgraph_read.py  dgraph_relations.py  dgraph_traversal.py  dgraph_update.py  dgraph_util.py
ami/implementations/mem/: redis_dao.py  redis_update.py
ami/implementations/rest/: rest_dao.py  rest_operations.py
ami/implementations/sql/: postgresql_create.py  postgresql_dao.py  postgresql_delete.py  postgresql_util.py  (+1 more)
ami/models/: base_model.py  secret_pointer.py  secured_mixin.py  security.py  storage_config.py  storage_config_factory.py
ami/secrets/: adapter.py  client.py
ami/security/: encryption.py
ami/services/: decorators.py
ami/utils/: http_client.py
config/: banned_words_exceptions.yaml  sensitive_files_exceptions.yaml  storage-config.yaml
docs/: REQUIREMENTS-OPERATIONS.md  REQUIREMENTS.md
docs/requirements/: REQ-REPORT.md  REQ-SERVE.md
docs/specifications/: SPEC-REPORT.md  SPEC-SERVE.md
res/ansible/: compose.yml  volumes.yml
res/config/: coverage_thresholds.yaml
res/docker/: docker-compose.yml
tests/: conftest.py
tests/helpers/: embedding.py
tests/integration/: test_config_loading.py  test_encryption_roundtrip.py  test_model_serialization.py  test_registry_usage.py  test_secrets_lifecycle.py
tests/unit/: test_auth_rules.py  test_base_model_full.py  test_bootstrap.py  test_coverage_gaps.py  test_dao_boundaries.py  test_dao_wrappers_extra.py  test_decorators.py  test_dgraph_create_delete.py  test_dgraph_dao_ops.py  test_dgraph_graph_pure.py  test_dgraph_graph_traversal_deep.py  test_dgraph_read_ops.py  test_dgraph_relations_ops.py  test_dgraph_traversal_pure.py  test_dgraph_update_deep.py  test_dgraph_update_pure.py  test_dgraph_util.py  test_embedding_service.py  test_encryption.py  test_graph_relations.py  test_http_client.py  test_misc_modules.py  test_openbao_dao_ops.py  test_openbao_deep.py  test_pgvector_dao_ops.py  test_pgvector_sub_ops.py  test_postgresql_create_logic.py  test_postgresql_dao_ops.py  test_postgresql_sub_ops.py  test_postgresql_util.py  test_prometheus_connection_pure.py  test_prometheus_dao_ops.py  test_prometheus_dao_wrapper.py  test_prometheus_models.py  test_prometheus_sub_ops.py  test_prometheus_write_pure.py  test_redis_dao_ops.py  test_redis_deep.py  test_redis_helpers.py  test_redis_sub_ops.py  (+14 more)
(+87 files in other folders)
