[build-system]
requires = ["setuptools==80.10.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ami-dataops"
version = "0.1.0"
description = "Polyglot persistence foundation for AMI services"
requires-python = "==3.11.*"
dependencies = [
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "asyncpg==0.31.0",
    "pydgraph>=24.3.0",
    "redis>=7.0.0",
    "aiohttp>=3.13.0",
    "httpx==0.28.1",
    "loguru==0.7.3",
    "pyyaml==6.0.3",
    "cryptography>=44.0.0",
    "uuid-utils==0.14.0",
    "setuptools==80.10.2",
    "hvac>=2.1.0",
    "bcrypt>=4.0.0",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "pytest-timeout==2.4.0",
    "mypy==1.19.1",
    "pre-commit>=4.0.0",
    "ruff>=0.8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ami*"]

[tool.uv]
package = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = ["integration: marks tests as integration tests"]
norecursedirs = ["tmp", "build", "dist"]

[tool.mypy]
# Per-module overrides for libraries missing type stubs

[[tool.mypy.overrides]]
module = ["pydgraph", "pydgraph.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["asyncpg", "asyncpg.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["torch", "torch.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["optimum", "optimum.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["hvac", "hvac.*"]
ignore_missing_imports = true

[tool.coverage.run]
concurrency = ["thread"]
